--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1>Django-DRF Demo</h1>
-        <p>dataTable Example (server-side)</p>
+        <h1>REST API CRUD</h1>
+        <p>Test</p>
     </div>
 
     <!-- New  button -->
