--- a/templates/hazard.html
+++ b/templates/hazard.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1>Hazards</h1>
+        <h1>Hazards (MPTT)</h1>
         <p>REST API CRUD</p>
     </div>
 
@@ -25,6 +25,7 @@
         <tr>
             <th>id</th>
             <th>title</th>
+            <th>parent</th>            
             <th>description</th>  
             <th>slug</th>          
             <th>last_modify_date</th>
