--- a/templates/home.html
+++ b/templates/home.html
@@ -35,14 +35,14 @@
     <br> 
     <a href="/musics/">Music</a> 
     <br>
-    <a href="/risks/">Risks</a> 
+    <a href="/risks/">Risks (mptt)</a> 
     <br>    
-    <a href="/hazards/">Hazards (mptt)</a> 
     <br> 
+    Dashboard (Breadcrumbs):
     <br> 
-    Breadcrumbs:
+    <a href="/risk/root/">Root</a>
     <br> 
-    <a href="/risk/allrisks/mammals/felines/cats/">Example 1</a>
+    <a href="/risk/root/fraud/">Node</a>
     <br> 
     <br>How to dynamically filter the datatable and display only the last object of the breadcrumb ?
     <br> 
