--- a/templates/risks.html
+++ b/templates/risks.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hazards</title>
+    <title>Risks</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'stylesheets/bootstrap.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'stylesheets/jquery.dataTables.css' %}" type="text/css"/>
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1>Hazards (MPTT)</h1>
+        <h1>Risks (MPTT)</h1>
         <p>REST API CRUD</p>
     </div>
 
@@ -107,6 +107,6 @@
 <script src="{% static 'js/jquery.dataTables.js' %}"></script>
 
 <!-- Call to custom js for datatable -->
-<script src="{% static 'js/datatable_hazard.js' %}"></script>
+<script src="{% static 'js/datatable_risk.js' %}"></script>
 </body>
 </html>
