--- a/templates/home.html
+++ b/templates/home.html
@@ -31,6 +31,8 @@
     <a href="/">Nested-serialize-recursive</a>
     <br> 
     <br>
+
+<!--
     Datatables:
     <br> 
     <a href="/musics/">Music</a> 
@@ -38,11 +40,13 @@
     <a href="/risks/">Risks (mptt)</a> 
     <br>    
     <br> 
+-->    
+
     Dashboard (Breadcrumbs):
     <br> 
-    <a href="/risk/root/">Root</a>
+    <a href="/risk/root/">Animals</a>
     <br> 
-    <a href="/risk/root/fraud/">Node</a>
+    <a href="/risk/root/mammals/felines/cats/">Cats</a>
     <br> 
     <br>How to dynamically filter the datatable and display only the last object of the breadcrumb ?
     <br> 
