--- a/templates/risk/risk.html
+++ b/templates/risk/risk.html
@@ -85,7 +85,7 @@
                         <div class="form-group">
                             <label for="parent"><span class="glyphicon glyphicon-file"></span> parent</label>
                             <input type="text" class="form-control" id="parent" name="parent"
-                                   placeholder="Enter parent" required="true">
+                                   placeholder="Enter parent" required="false">
                         </div>
 
                         <div class="form-group">
