--- a/templates/home.html
+++ b/templates/home.html
@@ -51,19 +51,12 @@
     <br>How to dynamically filter the datatable and display only the last object of the breadcrumb ?
     <br> 
     <br>
-    (Bootstrap?) Trees:
-    <br>
-    <a href="/risk/list">Risks</a>
-    <br> 
-    <a href="/responses_list">Responses</a>
-    <br>        
-    <br> 
     Admin:
     <br>
     <a href="/admin/risk/">Admin</a>
     <br>
     <br>
-    CRUD:
+    CRUD (html):
     <br>
     <a href="/risk/create/">Create</a>
     <br>
@@ -75,8 +68,14 @@
     <br>
     <a href="/risk/5/move/">Move #5</a>
     <br>
-
-
+    <br>
+    Trees (pending):
+    <br>
+    <a href="/">Risks</a>
+    <br> 
+    <a href="/">Responses</a>
+    <br>        
+    <br> 
 
     <br> 
 
