--- a/templates/home.html
+++ b/templates/home.html
@@ -26,36 +26,40 @@
     <br> 
     <a href="/api/">API</a>
     <br> 
-    <a href="/api/risk/1">API PUT</a>
+    <a href="/api/risk/14">API (#14)</a>
     <br> 
+<!--
+
     <a href="/">Nested-serialize-recursive</a>
     <br> 
     <br>
 
-<!--
+
     Datatables:
     <br> 
     <a href="/musics/">Music</a> 
     <br>
     <a href="/risks/">Risks (mptt)</a> 
+
+-->    
     <br>    
     <br> 
--->    
-
     Dashboard (Breadcrumbs):
     <br> 
     <a href="/risk/root/">Animals</a>
     <br> 
     <a href="/risk/root/mammals/felines/cats/">Cats</a>
     <br> 
-    <br>How to dynamically filter the datatable and display only the last object of the breadcrumb ?
+    <br>(How to dynamically filter the datatable and display only the last object of the breadcrumb ?)
     <br> 
+    <br>
     <br>
     Admin:
     <br>
     <a href="/admin/risk/">Admin</a>
     <br>
     <br>
+<!--
     CRUD (html):
     <br>
     <a href="/risk/create/">Create</a>
@@ -76,7 +80,7 @@
     <a href="/">Responses</a>
     <br>        
     <br> 
-
+-->
     <br> 
 
 
