--- a/templates/risk/risk.html
+++ b/templates/risk/risk.html
@@ -15,7 +15,7 @@
 
 <br>
 <br>
-        Risks
+        Risk tree
         {% for ancestor in instance.get_ancestors %}
             > <a href="{{ ancestor.get_absolute_url }}">{{ ancestor.title }}</a>
         {% endfor %}
