added responses API

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,8 +26,11 @@
     <br> 
     <a href="/api/">API</a>
     <br> 
-    <a href="/api/risk/14">API (#14)</a>
+    <a href="/api/risk/14">API Risk (#14)</a>
     <br> 
+    <a href="/api/responses/1">API Responses (#1)</a>
+    <br> 
+
 <!--
 
     <a href="/">Nested-serialize-recursive</a>
