added responses datatable

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
   
 <div class="container">
 
-
+    <br>-Dynamically filter datatables to display only the items belonging to the last object of the breadcrumb
     <br>
     <br>
     REST API:
@@ -47,15 +47,19 @@
 -->    
     <br>    
     <br> 
-    Dashboard (Breadcrumbs):
+    Risks:
     <br> 
-    <a href="/risk/root/">Animals</a>
+    <a href="/risk/root/">All</a>
     <br> 
-    <a href="/risk/root/mammals/felines/cats/">Cats</a>
-    <br> 
-    <br>(How to dynamically filter the datatable and display only the last object of the breadcrumb ?)
-    <br> 
+    <a href="/risk/root/mammals/felines/cats/">Cats only</a>
+    <br>  
     <br>
+    Responses:
+    <br> 
+    <a href="/risk2/root/">All</a>
+    <br> 
+    <a href="/risk2/root/mammals/felines/cats/">Cats</a>
+    <br> 
     <br>
     Admin:
     <br>
