added responses datatable

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
   
 <div class="container">
 
-    <br>-Dynamically filter datatables to display only the items belonging to the last object of the breadcrumb
+    <br>
     <br>
     <br>
     REST API:
@@ -44,22 +44,19 @@
     <br>
     <a href="/risks/">Risks (mptt)</a> 
 
--->    
-    <br>    
+-->       
     <br> 
-    Risks:
+    Risk dashboard:
     <br> 
     <a href="/risk/root/">All</a>
     <br> 
-    <a href="/risk/root/mammals/felines/cats/">Cats only</a>
+    <a href="/risk/root/mammals/felines/cats/">Cats only</a> (should filter)
     <br>  
     <br>
-    Responses:
+    Response datatable:
     <br> 
-    <a href="/risk2/root/">All</a>
-    <br> 
-    <a href="/risk2/root/mammals/felines/cats/">Cats</a>
-    <br> 
+    <a href="/dashboard_2/">All</a>
+    <br>  
     <br>
     Admin:
     <br>
@@ -89,7 +86,12 @@
     <br> 
 -->
     <br> 
-
+    To Do:
+    <br>    
+    -Dynamically filter items in the datatable according to the last object of the breadcrumb
+    <br>
+     -Put 2 datatables (Risk & Response) together on the Risk dashboard 
+    <br>
 
 </div>
 
