added responses datatable

--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
     <a href="/risk/root/mammals/felines/cats/">Cats only</a> (should filter)
     <br>  
     <br>
-    Response datatable:
+    Responses:
     <br> 
     <a href="/dashboard_2/">All</a>
     <br>  
