put 2 datatables on same page

--- a/templates/dashboard_2.html
+++ b/templates/dashboard_2.html
@@ -24,7 +24,7 @@
 
 
     <!-- Start of Datatables -->
-    <table id="datatables" class="table table-hover">
+    <table id="datatables2" class="table table-hover">
         <thead>
         <tr>
             <th>Id</th>
