--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
     <a href="/api/risk/14">API Risk (#14)</a>
     <br> 
     <a href="/api/responses/1">API Responses (#1)</a>
-    <br> 
+ 
 
 <!--
 
@@ -37,18 +37,12 @@
     <br> 
     <br>
 
-
-    Datatables:
+--> 
     <br> 
-    <a href="/musics/">Music</a> 
-    <br>
-    <a href="/risks/">Risks (mptt)</a> 
-
--->       
     <br> 
-    Risk dashboard:
+    Risk + Responses:
     <br> 
-    <a href="/risk/root/">All</a>
+    <a href="/risk/root/">All</a>  (only Risks appear)
     <br> 
     <a href="/risk/root/mammals/felines/cats/">Cats only</a> (should filter)
     <br>  
@@ -58,6 +52,11 @@
     <a href="/dashboard_2/">All</a>
     <br>  
     <br>
+    Musics:
+    <br> 
+    <a href="/musics/">All</a> 
+    <br>     
+    <br> 
     Admin:
     <br>
     <a href="/admin/risk/">Admin</a>
