Adds filtering capabilities using RESTful endpoints

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,9 +26,9 @@
     <br> 
     <a href="/api/">API</a>
     <br> 
-    <a href="/api/risk/14">API Risk (#14)</a>
+    <a href="/api/risk/felines/">API Risk (#14)</a>
     <br> 
-    <a href="/api/responses/1">API Responses (#1)</a>
+    <a href="/api/responses/cats/">API Responses (#1)</a>
  
 
 <!--
