changed from children to descendants

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,9 +26,9 @@
     <br> 
     <a href="/api/">API</a>
     <br> 
-    <a href="/api/risk/felines/">API Risk (#14)</a>
+    <a href="/api/risk/mammals/">Mammals</a>
     <br> 
-    <a href="/api/responses/cats/">API Responses (#1)</a>
+    <a href="/api/responses/cats/">Cats</a>
  
 
 <!--
