added country model

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,12 +24,15 @@
     <br>
     REST API:
     <br> 
-    <a href="/api/">API</a>
+    <a href="/api/risk/mammals/">Risk: Mammals & descendants</a>
     <br> 
-    <a href="/api/risk/mammals/">Mammals</a>
+    <a href="/api/responses/cats/">Response: Cats</a>
     <br> 
-    <a href="/api/responses/cats/">Cats</a>
- 
+    <br> 
+    <a href="/api/country/XH/">Country: South America</a>
+    <br> 
+    <a href="/api/country/BR/">Country: Brazil</a>
+  
 
 <!--
 
@@ -40,23 +43,20 @@
 --> 
     <br> 
     <br> 
-    Risk + Responses:
+    Risk Dashboard:
     <br> 
-    <a href="/risk/root/">All</a>  (only Risks appear)
+    <a href="/risk/root/">All risks</a>  
     <br> 
-    <a href="/risk/root/mammals/felines/cats/">Cats only</a> (should filter)
+    <a href="/risk/root/mammals/felines/cats/">Cats only</a> 
     <br>  
     <br>
-    Responses:
+    Country Dashboard:
     <br> 
-    <a href="/dashboard_2/">All</a>
+    <a href="/country/root/">All countries</a>  
+    <br> 
+    <a href="/country/root/XH/BR/">Brazil only</a> 
     <br>  
     <br>
-    Musics:
-    <br> 
-    <a href="/musics/">All</a> 
-    <br>     
-    <br> 
     Admin:
     <br>
     <a href="/admin/risk/">Admin</a>
