added country model

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
     <a href="/api/responses/cats/">Response: Cats</a>
     <br> 
     <br> 
-    <a href="/api/country/XH/">Country: South America</a>
+    <a href="/api/country/XH/">Country: South America & descendants</a>
     <br> 
     <a href="/api/country/BR/">Country: Brazil</a>
   
