New endpoint and dataTable logic for the Country model

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,9 +52,9 @@
     <br>
     Country Dashboard:
     <br> 
-    <a href="/country/root/">All countries</a>  
+    <a href="/country/world/">All countries</a>  
     <br> 
-    <a href="/country/root/XH/BR/">Brazil only</a> 
+    <a href="/country/world/XH/BR/">Brazil only</a> 
     <br>  
     <br>
     Admin:
